# 4r2v6

./: .dockerignore  .gitignore  CHANGELOG_APEX_20260707.md  CHANGELOG_V7.7_FUSION.md  CHANGELOG_V7.8_HARDENING.md  CHANGES.md  Dockerfile  Dockerfile.sidecar  Funcionamiento completo.md  Makefile  PERFECTION_ROADMAP.md  PUSH_v7_wsl.sh  README.md  README_top_level.md  REPORTE_AUDITORIA_TECNICA.md  VALIDACION_ADVERSARIAL_HELDOUT.md  VALIDACION_ANTICAMUFLAJE.md  VALIDACION_FASE3_HELDOUT.md  VALIDACION_FASE3_OOD_GENERALIZACION.md  docker-compose.sidecar.yml  evidence_index.json  hisotiraldetrabajoyaccionesAntigravity.md  historiafable5.md  informejulesflav7.7fusion.md  pyproject.toml  self_test.py
4R2-MASTER-DELIVERY/: .gitignore  AGENTS.md  CANON_FREEZE.md  CHANGELOG_CANON_FREEZE.md  README.md  RUNBOOK_PILOT.md  docker-compose.yml  evidence_index.json  smoke_test.ps1  walkthrough.md
antigravity_wings/: .gitignore  AUDIT_RESPONSE.md  CANON_MANIFEST.json  Makefile  README.md  TEST_MATRIX.md  benchmark_results.json  launcher.py  pip_log.txt  pyproject.toml  run_benchmark.py
antigravity_wings/antigravity_wings/: __init__.py
antigravity_wings/antigravity_wings/api/: decision_schema.py  evidence_packer.py  json_utils.py  models.py  server.py  telemetry.py
antigravity_wings/antigravity_wings/audit/: __init__.py  hash_chain.py
antigravity_wings/antigravity_wings/database/: ports.py
antigravity_wings/antigravity_wings/dual_agents/: arbiter.py  luigi.py  mario.py
antigravity_wings/antigravity_wings/fuse_config/: generator.py
antigravity_wings/antigravity_wings/fuses/: __init__.py  fuses_4r2.py
antigravity_wings/antigravity_wings/logging_config/: setup.py
antigravity_wings/antigravity_wings/motor_bridge/: interface.py  mock_motor.py  real_motor.py
antigravity_wings/antigravity_wings/notebook_bridge/: client.py
antigravity_wings/antigravity_wings/numeric/: translator.py
antigravity_wings/antigravity_wings/observation/: observer.py  registry.py
antigravity_wings/antigravity_wings/operators/: dual_runtime.py
antigravity_wings/antigravity_wings/orchestration/: master.py  session_manager.py
antigravity_wings/antigravity_wings/profiles/: client_profile.py
antigravity_wings/antigravity_wings/resilience/: circuit_breaker.py
antigravity_wings/antigravity_wings/scripts/: demo_pipeline.py
antigravity_wings/antigravity_wings/thermal/: __init__.py  accumulator.py
antigravity_wings/antigravity_wings/tomography/: builder.py  schema.json  wiring_mock.json
antigravity_wings/antigravity_wings/utils/: logging.py
antigravity_wings/docs/: ANTIGRAVITY_FLAT_CONTEXT_2026-01-08.md  ARXIV_WHITE_PAPER.md  ASSUMPTIONS_AND_LIMITS.md  AUDIT_RESPONSE_JULES_2024.md  CANON_NOTEBOOKLM_FLAT_v1_1.md  CANON_V1_0_PILOT_READY.md  ENTROPY_LOSS_CANONICAL.md  EXECUTIVE_VALUE_ANALYSIS_RICCI.md  MARIO_LUIGI_EXPLAINED.md  ONBOARDING_CHECKLIST.md  OPERATION_MANUAL.md  PAPER_COMPANION_TECHNICAL.md  PILOTS_DESIGN.md  RADIOGRAFIA_FINAL_3D.md  REPORTE_AUDITORIA_EXTERNA.md  TECHNICAL_PROPOSAL_INTEGRATION.md  VALORACION_ESTRATEGICA_CANONICAL.md  WHAT_IS_NOT.md  WHITE_PAPER_ARCHITECTURE.md  antigravity_wings_v1.tex
antigravity_wings/pilots/chatbot/: chatbot_motor.py  chatbot_sources.py  fuses_chatbot.json  mock_backend.py  tomography_config.json
antigravity_wings/pilots/insurance/: insurance_launcher.py  mocks.py  verify_pilot.py
antigravity_wings/runtime_data/: system_status.json
antigravity_wings/scripts/: generate_flat_context.py  generate_hashes.py
antigravity_wings/systems/basic/src/core/: kernel.py
antigravity_wings/tests/: test_api_basic.py  test_audit_chain.py  test_cca_conservative_default.py  test_contracts.py  test_dual_arbiter.py  test_judge_mosef.py  test_recalibration_decoupling.py  test_reroute_vector.py  test_resilience_hardened.py  test_runtime_operator.py  test_smoke.py  test_thermal_accumulator.py  test_thermal_snapshot.py
archive/: kernel_1240421_old_broken.py
benchmarks/: METHODOLOGY.md  public_benchmark.py
core/: _synctest.txt  auth_v6.py  frontier_v7.py  kernel_1240421.py  kernel_v6.py
docs/: ARCHITECTURE.md  CANON_SPEC.md  (+25 more)
(+212 files in other folders)
