[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "4r2-coherence-engine"
version = "4.0.0"
description = "Canonical 4R2 Coherence Engine with NRIF metrics, real motor defaults, full reproducibility and professional documentation."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary / Internal Use"}
authors = [
  {name = "Ricardo Yazigi (with Grok agentic collaboration)"}
]
keywords = ["coherence", "thermodynamics", "AI evaluation", "NRIF", "determinism"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "numpy>=1.23",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "black",
  "ruff",
]

[project.urls]
Homepage = "internal"
Documentation = "docs/RUNBOOK.md"
"Source" = "clean copy in Grok4r2 rempacado"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "antigravity_wings*", "antigravity_wings.fuses*"]

[tool.pytest.ini_options]
testpaths = ["antigravity_wings/tests", "4R2-MASTER-DELIVERY/tests"]
pythonpath = ["core", "antigravity_wings"]
addopts = "--ignore=4R2-MASTER-DELIVERY/tests/tests_output.txt"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
